# codecity

./: .env.example  .gitignore  .infisical.json  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  main.py  mkdocs.yml  pyproject.toml  vetur.config.js 
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh  postStartCommand.sh
api/: .gitignore  Pipfile  api.py  generate_openapi.py  main.py  models.py  pyproject.toml  repo.py  utils.py
api/api/: settings.py
api/authentication/: admin.py
api/codecity/: __init__.py  codecity.py  helpers.py  models.py  router.py  settings.py  utils.py
api/codecity/api/: __init__.py  github.py  gitpython.py
api/worker/: config.py  tasks.py  utils.py
app/: .eslintrc.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app-v1/: .prettierrc.js
app-v1/src/components/CodeCity/: Building.vue  CodeCity.vue  Road.vue
app/app/: root.tsx
app/app/api/: index.ts
app/app/routes/: codecity.tsx
app/src/: App.vue  environment.js  helpers.ts
app/src/api/: index.ts
app/src/api/models/: CodeCityBlobNode.ts  CodeCityRepoOverview.ts  CodeCityResponse.ts  CodeCityRevisionStats.ts  CodeCityRootTree.ts  CodeCityTreeNode.ts
app/src/api/services/: CodecityService.ts  DefaultService.ts
app/src/assets/: base.css
app/src/components/: Building.vue  CityBlock.vue  CodeCity-v3.vue  CodeCity.vue  RenderBuilding.vue  RenderCity.vue  RenderDirectory.vue  RenderGrid.vue  RenderNode.vue  RenderRepo.vue  RenderRoad.vue  Road.vue
app/src/components/CodeCity/: Building.vue  CityBlock.vue  CodeCity.vue  Neighborhood.vue  Road.vue
app/src/constants/: tiles.ts
app/src/lib/: store.ts  tiles.ts  types.ts  utils.ts
app/src/routes/: Header.svelte
app/src/routes/codecity/: +page.svelte  +page.ts  CodeCity.svelte
app/src/views/: Home.vue  HomeView.vue
docs/: index.md
docs/plans/: 2026-01-17-codecity-architecture-design.md  2026-01-17-codecity-implementation-plan.md  2026-01-17-lowpoly-ui-implementation.md  2026-01-17-lowpoly-ui-redesign.md  2026-01-18-connected-streets-design.md  2026-01-18-connected-streets-plan.md  2026-01-18-javascript-tests-design.md  2026-01-18-map-improvements-v2-design.md  2026-01-18-map-improvements-v2-plan.md  2026-01-18-map-rendering-improvements-design.md  2026-01-18-map-rendering-improvements-plan.md  2026-01-18-maplibre-frontend-design.md  2026-01-18-maplibre-implementation-plan.md  2026-01-18-visualization-improvements-design.md  2026-01-18-visualization-improvements-plan.md  2026-01-19-tile-grid-layout-design.md  2026-01-19-tile-grid-layout-plan.md
react_app/: package-lock.json  package.json
react_app/app/: utils.ts
react_app/app/components/: CodeCityScene.tsx  SceneComponent.tsx
react_app/app/routes/: codecity.tsx
react_app/app/styles/: global.css
react_app/app/types/: codecity.ts
scripts/: codegen-openapi
src/codecity/: __init__.py  cli.py  types.py
src/codecity/analysis/: __init__.py  cache.py  diff.py  geojson_layout.py  geojson_models.py  git.py  grid_layout.py  layout.py  metrics.py  models.py  tile_grid.py
src/codecity/analysis/tests/: test_cache.py  test_diff.py  test_geojson_layout.py  test_geojson_models.py  test_git.py  test_grid_layout.py  test_layout.py  test_metrics.py  test_models.py  test_tile_grid.py
src/codecity/api/: __init__.py  app.py  watcher.py  websocket.py
src/codecity/api/tests/: test_app.py  test_watcher.py  test_websocket.py
src/codecity/app/: .eslintrc.json  __init__.py  builder.py  city-map.js  city-renderer.js  index-maplibre.html  index.html  inspector.js  main.js  package.json  styles.css  vitest.config.js
src/codecity/app/__tests__/: city-map.test.js  city-renderer.test.js  inspector.test.js  main.test.js  setup.js
src/codecity/app/styles/: default.json
src/codecity/app/tests/: __init__.py  test_builder.py  test_camera_controls.py
src/codecity/cli/: __init__.py  commands.py
src/codecity/cli/tests/: __init__.py  test_commands.py
src/codecity/client/: __init__.py  client.py
src/codecity/config/: __init__.py  defaults.py  settings.py
src/codecity/config/tests/: test_defaults.py  test_settings.py
