[project]
name = "codecity"
version = "0.1.0"
description = "A description of your project"
keywords = []
readme = "README.md"
authors = [
    { name = "Thalida Noel", email = "codecity@thalida.com" }
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "rich-click>=1.9.5",
    "tqdm>=4.67.1",
    "yaspin>=3.4.0",
]

[project.urls]
Homepage = "https://thalida.github.io/codecity/"
Documentation = "https://thalida.github.io/codecity/"
Repository = "https://github.com/thalida/codecity"
Issues = "https://github.com/thalida/codecity/issues"
Changelog = "https://github.com/thalida/codecity/releases"

[project.scripts]
codecity = "codecity.cli:cli"

[tool.ruff.lint]
extend-select = ["I", "F"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["src"]

[tool.uv.workspace]
members = [
    "foo",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
