[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <codecity@thalida.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
rich = "^13.7.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
emoji = "^2.10.0"
nltk = "^3.8.1"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
gitpython = "^3.1.41"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
websockets = "^12.0"
celery = {extras = ["redis"], version = "^5.3.6"}
httpx = "^0.26.0"
flower = "^2.0.1"
python-socketio = "^5.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
