[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.30",
    "celery>=5.6.2",
    "dj-database-url>=3.1.0",
    "django>=5.2.10",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "django-crispy-forms>=2.5",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-oauth-toolkit>=3.2.0",
    "django-simple-history>=3.11.0",
    "django-storages>=1.14.6",
    "django-unfold>=0.76.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "drf-social-oauth2>=3.2.0",
    "drf-spectacular>=0.29.0",
    "minio>=7.2.20",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
    "social-auth-app-django>=5.7.0",
]

[tool.ruff.lint]
extend-select = ["I", "F"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
known-first-party = ["api"]
